--- a/webapp/src/main/webapp/resources/css/uikit.css
+++ b/webapp/src/main/webapp/resources/css/uikit.css
@@ -2024,14 +2024,16 @@ select.uk-form-width-xsmall {
  * Primary
  */
 .uk-button-primary {
-  background-color: #1e87f0;
+  /*background-color: #1e87f0;*/
+  background-color: #f2a365;
   color: #fff;
   border: 1px solid transparent;
 }
 /* Hover + Focus */
 .uk-button-primary:hover,
 .uk-button-primary:focus {
-  background-color: #0f7ae5;
+  /*background-color: #0f7ae5;*/
+  background-color: #fa8a32;
   color: #fff;
 }
 /* OnClick + Active */
@@ -7268,8 +7270,10 @@ ul.uk-nav-sub {
 .uk-text-emphasis {
   color: #333 !important;
 }
+/*Change*/
 .uk-text-primary {
-  color: #1e87f0 !important;
+  /*color: #1e87f0 !important;*/
+  color: #30475e !important;
 }
 .uk-text-secondary {
   color: #222 !important;
