comments view improved

--- a/webapp/src/main/webapp/resources/css/treeView.css
+++ b/webapp/src/main/webapp/resources/css/treeView.css
@@ -9,6 +9,7 @@
     border-left: 2px solid #c9c9c9;
     margin-left: 1em;
 }
+/*
 .li div {
     padding-left: 1em;
     position: relative;
@@ -26,4 +27,4 @@
 }
 .ul > li:last-child {
     border-left: 2px solid transparent;
-}
+}*/
