--- a/webapp/src/main/webapp/resources/css/uikit.css
+++ b/webapp/src/main/webapp/resources/css/uikit.css
@@ -2005,14 +2005,14 @@ select.uk-form-width-xsmall {
 .uk-button-default {
   background-color: transparent;
   color: #333;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #f2a365;
 }
 /* Hover + Focus */
 .uk-button-default:hover,
 .uk-button-default:focus {
   background-color: transparent;
   color: #333;
-  border-color: #b2b2b2;
+  border-color: #fa8a32;
 }
 /* OnClick + Active */
 .uk-button-default:active,
@@ -5236,6 +5236,24 @@ ul.uk-nav-sub {
  * 3. Style
  * 4. Required for `a`
  */
+.uk-navbar-nav > li > a,
+.uk-navbar-item,
+.uk-navbar-toggle {
+  /* 1 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* 2 */
+  box-sizing: border-box;
+  min-height: 80px;
+  padding: 0 15px;
+  /* 3 */
+  font-size: 0.875rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /* 4 */
+  text-decoration: none;
+}
+
 .uk-navbar-nav > li > a,
 .uk-navbar-item,
 .uk-navbar-toggle {
@@ -12532,4 +12550,20 @@ iframe.uk-cover {
 
 .mid-bold {
   font-weight: 500;
+}
+
+.iconify {
+  width: 32px;
+  height: 32px;
+  color: #f2a365;
+}
+
+.iconify:hover,
+.iconify:focus {
+  color: #fa8a32;
+}
+
+.search-button {
+  padding-left: 10px !important;
+  padding-right: 10px !important;
 }
