--- a/webapp/src/main/webapp/resources/css/uikit.css
+++ b/webapp/src/main/webapp/resources/css/uikit.css
@@ -1528,7 +1528,7 @@ button.uk-icon:not(:disabled) {
   outline: none;
   background-color: #fff;
   color: #666;
-  border-color: #1e87f0;
+  border-color: #f2a365;
 }
 /* Disabled */
 .uk-input:disabled,
@@ -2047,14 +2047,14 @@ select.uk-form-width-xsmall {
  * Secondary
  */
 .uk-button-secondary {
-  background-color: #222;
+  background-color: #30475e;
   color: #fff;
   border: 1px solid transparent;
 }
 /* Hover + Focus */
 .uk-button-secondary:hover,
 .uk-button-secondary:focus {
-  background-color: #151515;
+  background-color: #222831;
   color: #fff;
 }
 /* OnClick + Active */
@@ -5352,7 +5352,7 @@ ul.uk-nav-sub {
   box-sizing: border-box;
   width: 200px;
   /* 4 */
-  padding: 25px;
+  padding: 10px;
   background: #fff;
   color: #666;
   box-shadow: 0 5px 12px rgba(0, 0, 0, 0.15);
@@ -7996,7 +7996,7 @@ iframe.uk-cover {
  */
 [class*='uk-inline'] {
   /* 1 */
-  display: inline-block;
+  /*display: inline-block;*/
   /* 2 */
   position: relative;
   /* 3 */
@@ -12568,3 +12568,40 @@ iframe.uk-cover {
   padding-left: 10px !important;
   padding-right: 10px !important;
 }
+.user-login-button {
+  padding-left: 35px !important;
+  padding-right: 35px !important;
+}
+
+.user-profile-button {
+  border: 1px solid #30475e;
+  color: #30475e;
+}
+
+.user-profile-button:hover,
+.user-profile-button:focus{
+  border: 1px solid #222831;
+  color: #222831;
+}
+
+.logout-button {
+  padding-left: 42px !important;
+  padding-right: 42px !important;
+  border: 1px solid #cf1b1b;
+  color: #cf1b1b;
+}
+
+.logout-button:hover,
+.logout-button:focus {
+  border: 1px solid #900d0d;
+  color: #900d0d;
+}
+
+.icon-error {
+  color: #f0506e;
+}
+
+.signup-login-button {
+  width: 100% !important;
+}
+
