--- a/webapp/src/main/webapp/resources/css/extraStyle.css
+++ b/webapp/src/main/webapp/resources/css/extraStyle.css
@@ -1,3 +1,23 @@
 .search-query-input::placeholder {
     color: #999;
 }
+
+.error {
+    color: red;
+}
+
+.hidden {
+    display: none;
+}
+
+.width-inherit {
+    width: inherit;
+}
+
+.pre-line {
+    white-space: pre-line;
+}
+
+.min-height-1000{
+    min-height: 1000px;
+}
