--- a/webapp/src/main/webapp/resources/css/uikit.css
+++ b/webapp/src/main/webapp/resources/css/uikit.css
@@ -5139,6 +5139,7 @@ ul.uk-nav-sub {
   display: flex;
   /* 1 */
   position: relative;
+  box-shadow: 0 1em 1em -1em rgba(0, 0, 0, .25);
 }
 /* Container
  ========================================================================== */
@@ -12392,7 +12393,7 @@ iframe.uk-cover {
 .uk-card-secondary > :not([class*='uk-card-media']) .uk-text-primary,
 .uk-overlay-primary .uk-text-primary,
 .uk-offcanvas-bar .uk-text-primary {
-  color: #fff !important;
+  /*color: #fff !important;*/
 }
 .uk-light .uk-text-secondary,
 .uk-section-primary:not(.uk-preserve-color) .uk-text-secondary,
@@ -12556,6 +12557,10 @@ iframe.uk-cover {
 }
 
 /*========================= CUSTOM ADDED =========================*/
+
+.main-page {
+  box-shadow: 0 -1em 1em -1em rgba(0, 0, 0, .25);
+}
 
 .uk-badge.disabled {
   color: #fff;
