--- a/webapp/src/main/webapp/resources/css/postView.css
+++ b/webapp/src/main/webapp/resources/css/postView.css
@@ -1,3 +1,12 @@
 a.like-post-button, a.like-comment-button{
     text-decoration: none;
 }
+
+#parsedBody img {
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: available;
+    max-height: 506px;
+}
