--- a/webapp/src/main/webapp/resources/css/extraStyle.css
+++ b/webapp/src/main/webapp/resources/css/extraStyle.css
@@ -13,6 +13,9 @@
 .m-text-red {
     color: #EA5455 !important;
 }
+.m-width-max-content {
+    width: max-content;
+}
 
 .m-bg-primary-lighter-5 {
     /*background-color: #262B35;*/
@@ -41,4 +44,13 @@
 
 .min-height-1000{
     min-height: 1000px;
+}
+
+.red-button {
+    background-color: #cf1b1b;
+}
+
+.red-button:hover,
+.red-button:focus {
+    background-color: #900d0d;
 }
