--- a/webapp/src/main/webapp/resources/css/extraStyle.css
+++ b/webapp/src/main/webapp/resources/css/extraStyle.css
@@ -147,3 +147,10 @@
 .extra-margin-small-top {
     margin-top: 5px !important;
 }
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -260px;
+    visibility: hidden;
+}
