--- a/webapp/src/main/webapp/resources/css/extraStyle.css
+++ b/webapp/src/main/webapp/resources/css/extraStyle.css
@@ -165,14 +165,8 @@ a.anchor {
     visibility: hidden;
 }
 
-.movie-poster {
-
-    width:300px; /*container-width*/
-    overflow:hidden; /*hide bounds of image */
-    margin: 0;   /*reset margin of figure tag*/
-}
-
-.movie-poster img{
-    display:block; /*remove inline-block spaces*/
-    width:100%; /*make image streatch*/
+.movie-poster{
+    object-fit: cover;
+    height: 450px;
+    width: 300px;
 }
