--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -1,96 +1,29 @@
-$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
-// bower:scss
-@import 'bootstrap-sass-official/assets/stylesheets/bootstrap.scss';
-// endbower
 
-@import 'partials/home';
+// // 1. Your custom variables and variable overwrites.
+// @import "uikit/alert.scss";
+// @import "uikit/align.scss";
+// // ... import all
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
+// // 2. Import default variables and available mixins.
+// @import "uikit/src/scss/variables.scss";
+// @import "uikit/src/scss/mixins.scss";
 
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
-  }
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
+// // 3. Your custom mixin overwrites.
+// @import "uikit/accordion-mixins.scss";
+// @import "uikit/alert-mixins.scss";
+// @import "uikit/align-mixins.scss";
+// // ... import all
 
 
+@import 'uikit/src/scss/variables.scss';
+@import 'uikit/src/scss/mixins.scss';
+
+@import "uikit/_variables.scss";
+@import "uikit/_navbar.scss";
+@import "uikit/_button.scss";
+@import "uikit/_text.scss";
+
+@import 'uikit/src/scss/uikit.scss';
+
+
+@import 'moovify/_navBar.scss';
