--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -21,6 +21,7 @@
 @import "uikit/_variables.scss";
 @import "uikit/_navbar.scss";
 @import "uikit/_button.scss";
+@import "uikit/_search.scss";
 @import "uikit/_text.scss";
 
 @import 'uikit/src/scss/uikit.scss';
