--- a/frontend/app/styles/extraStyle.css
+++ b/frontend/app/styles/extraStyle.css
@@ -175,3 +175,99 @@ a.anchor {
     height: 450px;
     width: 300px;
 }
+
+.main-page {
+  box-shadow: 0 -1em 1em -1em rgba(0, 0, 0, .25);
+}
+
+.uk-badge.disabled {
+  color: #fff;
+}
+
+.mid-bold {
+  font-weight: 500;
+}
+
+.iconify {
+  width: 32px;
+  height: 32px;
+}
+
+.admin-badge {
+  width: 18px;
+  height: 18px;
+}
+
+.admin-button {
+  border: 1px solid #F3F3F3;
+  color: #F3F3F3;
+}
+
+.admin-button:hover,
+.admin-button:focus {
+  border: 1px solid #D1D1D1;
+  color: #D1D1D1;
+}
+
+.nav-user {
+  color: #f2a365;
+}
+
+.nav-user:hover,
+.nav-user:focus,
+.nav-user:active {
+  color: #fa8a32;
+}
+
+.userTitle {
+  color: #f2a365;
+}
+
+.search-button {
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+}
+.user-login-button {
+  padding-left: 35px !important;
+  padding-right: 35px !important;
+}
+
+.user-profile-button {
+  border: 1px solid #30475e;
+  color: #30475e;
+}
+
+.user-profile-button:hover,
+.user-profile-button:focus{
+  border: 1px solid #222831;
+  color: #222831;
+}
+
+.logout-button {
+  border: 1px solid #cf1b1b;
+  color: #cf1b1b;
+}
+
+.logout-button:hover,
+.logout-button:focus {
+  border: 1px solid #900d0d;
+  color: #900d0d;
+}
+
+.icon-error {
+  color: #f0506e;
+}
+
+.extended-button {
+  width: 100% !important;
+}
+
+.delete-comment-button {
+  color: #cf1b1b !important;
+  font-size: 16px;
+}
+
+.delete-comment-button:hover,
+.delete-comment-button:focus {
+  color: #900d0d !important;
+}
