--- a/frontend/app/styles/uikit/_button.scss
+++ b/frontend/app/styles/uikit/_button.scss
@@ -11,8 +11,11 @@ $button-primary-background:                 $moovify-primary-color-light;
 $button-primary-hover-background:           $moovify-primary-color-dark;
 $button-font-size:                          0.875rem;
 $button-padding-horizontal:                 30px;
-
-
+$button-default-background:                 transparent;
+$button-default-hover-background:           $button-default-background;
+$button-default-active-background:          $button-default-background;
+$button-default-hover-color:                $moovify-primary-color-dark;
+$button-default-active-background:          $moovify-primary-color-dark;
 // $button-line-height:                             $global-control-height - ($button-border-width * 2) !default;
 // $button-small-line-height:                       $global-control-small-height - ($button-border-width * 2) !default;
 // $button-large-line-height:                       $global-control-large-height - ($button-border-width * 2) !default;
@@ -57,6 +60,18 @@ $button-padding-horizontal:                 30px;
 // @mixin hook-button-focus(){}
 
 // @mixin hook-button-active(){}
+
+@mixin hook-button-default(){
+  border: 1px solid $moovify-primary-color-light;
+}
+
+@mixin hook-button-default-hover() {
+  border: 1px solid $moovify-primary-color-dark;
+}
+
+@mixin hook-button-default-active() {
+  border: 1px solid $moovify-primary-color-dark;
+}
 
 
 // Style modifiers
