--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -22,7 +22,11 @@
 @import "uikit/_navbar.scss";
 @import "uikit/_button.scss";
 @import "uikit/_search.scss";
+@import "uikit/_container.scss";
+@import "uikit/_link.scss";
+@import "uikit/_base.scss";
 @import "uikit/_text.scss";
+@import "uikit/_form.scss";
 
 @import 'uikit/src/scss/uikit.scss';
 
