--- a/frontend/app/styles/uikit/_link.scss
+++ b/frontend/app/styles/uikit/_link.scss
@@ -6,7 +6,7 @@
 
 // Variables
 // ========================================================================
-
+$link-heading-hover-color:          $moovify-primary-color-light;
 
 // Muted
 // ========================================================================
