--- a/frontend/app/styles/uikit/_navbar.scss
+++ b/frontend/app/styles/uikit/_navbar.scss
@@ -124,3 +124,7 @@ $navbar-nav-item-font-size:             0.875rem;
 
 // @mixin hook-inverse-navbar-toggle(){}
 // @mixin hook-inverse-navbar-toggle-hover(){}
+
+@mixin hook-navbar(){
+  box-shadow: 0 1em 1em -1em rgba(0, 0, 0, .25);
+}
