--- a/frontend/app/views/login/login.html
+++ b/frontend/app/views/login/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html ng-controller="LoginCtrl">
 <head>
-  <title>LOGIN</title>
+  <title>{{'USER_LOGIN_TITLE' | translate}}</title>
 </head>
 <body>
 <div class="uk-container uk-container-xsmall uk-margin-medium-top">
   <form novalidate>
     <fieldset class="uk-fieldset">
-      <legend class="uk-legend uk-text-uppercase uk-text-center uk-text-bold uk-text-large uk-text-secondary">LOGIN TITLEE</legend>
+      <legend class="uk-legend uk-text-uppercase uk-text-center uk-text-bold uk-text-large uk-text-secondary">{{'USER_LOGIN' | translate}}</legend>
       <div class="uk-margin">
         <div class="uk-inline uk-width-expand">
           <label>
@@ -18,7 +18,7 @@
 <!--              </c:when>-->
 <!--              <c:otherwise>-->
                 <span class="uk-form-icon" uk-icon="icon: user"></span>
-                <input class="uk-input" ng-model="user.username" type="text" placeholder="username"/>
+                <input class="uk-input" ng-model="user.username" type="text" placeholder="{{'USER_LOGIN_USERNAME' | translate}}"/>
 <!--              </c:otherwise>-->
 <!--            </c:choose>-->
           </label>
@@ -34,7 +34,7 @@
 <!--              </c:when>-->
 <!--              <c:otherwise>-->
                 <span class="uk-form-icon" uk-icon="icon: lock"></span>
-                <input class="uk-input" ng-model="user.password" type="password" placeholder="password" />
+                <input class="uk-input" ng-model="user.password" type="password" placeholder="{{'USER_LOGIN_PASSWORD' | translate}}" />
 <!--              </c:otherwise>-->
 <!--            </c:choose>-->
           </label>
@@ -50,18 +50,18 @@
       <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid uk-align-center">
         <label class="uk-text-center">
           <input class="uk-checkbox" type="checkbox"> <!-- ng-model="user.remember" -->
-          <span class="uk-text-secondary">REMEMBER ME</span>
+          <span class="uk-text-secondary">{{'USER_LOGIN_REMEMBERME' | translate}}</span>
         </label>
       </div>
       <div class="uk-text-center">
-        <input class="uk-button uk-button-primary uk-border-rounded extended-button" type="submit" value="LOGIN" ng-click="login(user)"/>
+        <input class="uk-button uk-button-primary uk-border-rounded extended-button uk-text-uppercase" type="submit" value="{{'USER_LOGIN' | translate}}" ng-click="login(user)"/>
       </div>
-      <div class="uk-text-center uk-text-bold uk-text-muted uk-margin">NO ACCOUNT? <a href="/user/create">SIGNUP</a></div>
+      <div class="uk-text-center uk-text-bold uk-text-muted uk-margin">{{'USER_LOGIN_NOACCOUNT' | translate}} <a href="/user/create">{{'USER_CREATE_SIGNUP' | translate}}</a></div>
     </fieldset>
   </form>
 
-  <div class="uk-text-center">
-    <a href="/user/resetPassword">RESET PASSWORD</a>
+  <div class="uk-text-center uk-text-bold">
+    <a href="/user/resetPassword">{{'USER_LOGIN_RESETPASSWORD' | translate}}</a>
   </div>
 </div>
 
