Page titles with i18n

--- a/frontend/app/views/login/login.html
+++ b/frontend/app/views/login/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-controller="LoginCtrl">
 <head>
-  <title>{{'USER_LOGIN_TITLE' | translate}}</title>
+  <title></title>
 </head>
 <body>
 <div class="uk-container uk-container-xsmall uk-margin-medium-top">
