Feature remember me

--- a/frontend/app/views/login/login.html
+++ b/frontend/app/views/login/login.html
@@ -49,7 +49,7 @@
       </div>
       <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid uk-align-center">
         <label class="uk-text-center">
-          <input class="uk-checkbox" type="checkbox"> <!-- ng-model="user.remember" -->
+          <input class="uk-checkbox" type="checkbox" ng-model='checkValue'> <!-- ng-model="user.remember" -->
           <span class="uk-text-secondary">{{'USER_LOGIN_REMEMBERME' | translate}}</span>
         </label>
       </div>
