--- a/frontend/app/styles/uikit/_base.scss
+++ b/frontend/app/styles/uikit/_base.scss
@@ -14,6 +14,7 @@
 $base-link-color:           $moovify-primary-color-light;
 $base-link-hover-color:     $moovify-primary-color-dark;
 $base-body-background:      #ECECEC;
+$base-heading-color:        $moovify-secondary-color-light;
 
 //$base-code-padding-horizontal:                   6px !default;
 //$base-code-padding-vertical:                     2px !default;
