--- a/frontend/app/styles/uikit/_button.scss
+++ b/frontend/app/styles/uikit/_button.scss
@@ -10,6 +10,7 @@
 $button-primary-background:                 $moovify-primary-color-light;
 $button-primary-hover-background:           $moovify-primary-color-dark;
 $button-primary-active-background:          $moovify-primary-color-dark;
+$button-secondary-background:               $moovify-secondary-color-light;
 $button-font-size:                          0.875rem;
 $button-padding-horizontal:                 30px;
 $button-default-background:                 transparent;
